--- a/stratHealthProject/stratHealthApp/templates/stratHealthApp/home.html
+++ b/stratHealthProject/stratHealthApp/templates/stratHealthApp/home.html
@@ -3,71 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" href="data:,">
     {% load static %}
     <link rel="stylesheet" href="{% static 'stratHealthApp/css/home.css' %}">
 </head>
 <body>
 
 <div id="index_container">
-    <h1>Strategic Health</h1>
-    <a href="{% url 'log_user_out' %}">Log Out</a>
+
+    <h2 class="header" id="logo_header">Strategic Health</h2>
+
+    <div class="header" id="home_top_middle">
+        <h3 id="home_form_label">Welcome {{ contact_name }}</h3>
+    </div>
+
+    <div class="header" id="home_top_right">
+        <a href="{% url 'log_user_out' %}">Log Out</a>
+    </div>
+
     <div id="home_form">
-        <h2>Welcome {{ contact_name }}</h2>
         {% if hospital_info|length > 0 %}
-            <ul>
-
             <!-- Using a dictionary of all hospitals with their information provided. -->
-                {% for key, value in hospital_info.items %}
-                    <li>
-                        <h3>{{ key }}</h3>
-                        <p>average salary is {{ value.salary_average }} and highest paid staff is {{ value.highest_paid_staff }}</p>
-                    </li>
-                {% endfor %}
+            {% for key, value in hospital_info.items %}
+                <div id="hospital_container">
+                    <h4 id="hospital_name">{{ key }}</h4>
+                    <p id="hospital_details">average salary is {{ value.salary_average }} and highest paid staff is {{ value.highest_paid_staff }}</p>
+                </div>
+            {% endfor %}
 
-        <!-- A list(array) of hospital objects with it's necessary information. Same information as above.-->
-        <!--        {% for each_hospital in hospital_info %}-->
-        <!--            <li>-->
-        <!--                <h3>{{ each_hospital.name }}</h3>-->
-        <!--                <p>average salary is {{ each_hospital.salary_average  }} and highest paid staff is {{ each_hospital.highest_paid_staff }}</p>-->
-        <!--            </li>-->
-        <!--        {% endfor %}-->
+<!--         A list(array) of hospital objects with it's necessary information. Same information as above.-->
+<!--            <ul>-->
+<!--                {% for each_hospital in hospital_info %}-->
+<!--                    <li>-->
+<!--                        <h3>{{ each_hospital.name }}</h3>-->
+<!--                        <p>average salary is {{ each_hospital.salary_average  }} and highest paid staff is {{ each_hospital.highest_paid_staff }}</p>-->
+<!--                    </li>-->
+<!--                {% endfor %}-->
+<!--            </ul>-->
 
-            </ul>
         {% else %}
             <h3>No hospitals attached to this user.</h3>
         {% endif %}
+    </div>
 
+    <div id="index_footer">
+        <p>Created By <a href="https://www.linkedin.com/in/kenngibbs/" target="_blank">Kenn Gibbs</a></p>
     </div>
 </div>
 
-
-<!--<h1>Home</h1>-->
-
-<!--<h3>{{ contact_name }}</h3>-->
-<!--<a href="{% url 'log_user_out' %}">Log Out</a>-->
-
-<!--{% if hospital_info|length > 0 %}-->
-<!--    <ul>-->
-
-<!--    &lt;!&ndash; Using a dictionary of all hospitals with their information provided. &ndash;&gt;-->
-<!--        {% for key, value in hospital_info.items %}-->
-<!--            <li>-->
-<!--                <h3>{{ key }}</h3>-->
-<!--                <p>average salary is {{ value.salary_average }} and highest paid staff is {{ value.highest_paid_staff }}</p>-->
-<!--            </li>-->
-<!--        {% endfor %}-->
-
-<!--    &lt;!&ndash; A list(array) of hospital objects with it's necessary information. Same information as above.&ndash;&gt;-->
-<!--&lt;!&ndash;        {% for each_hospital in hospital_info %}&ndash;&gt;-->
-<!--&lt;!&ndash;            <li>&ndash;&gt;-->
-<!--&lt;!&ndash;                <h3>{{ each_hospital.name }}</h3>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p>average salary is {{ each_hospital.salary_average  }} and highest paid staff is {{ each_hospital.highest_paid_staff }}</p>&ndash;&gt;-->
-<!--&lt;!&ndash;            </li>&ndash;&gt;-->
-<!--&lt;!&ndash;        {% endfor %}&ndash;&gt;-->
-
-<!--    </ul>-->
-<!--{% else %}-->
-<!--    <h3>No hospitals attached to this user.</h3>-->
-<!--{% endif %}-->
 </body>
 </html>
