--- a/stratHealthProject/stratHealthApp/static/stratHealthApp/css/home.css
+++ b/stratHealthProject/stratHealthApp/static/stratHealthApp/css/home.css
@@ -1,16 +1,109 @@
-html, body{
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+    color: #89b640;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
+body {
     background: #0b2e39;
+    font-size: 1.25em;
     color: white;
 }
 
-#index_container {
-    margin: 0% 25%;
+.header{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#logo_header{
+    grid-column: 1/4;
+    grid-row: 1;
+}
+
+#home_top_middle{
     text-align: center;
-    font-size: 1.25em;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#home_top_right{
+    text-align: right;
+    grid-column: 1/4;
+    grid-row: 1;
+}
+
+#index_container{
+    padding: 2% 8%;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+
+    display: grid;
+    grid-template-columns: 1fr 90% 1fr;
+    grid-template-rows: 10% 1fr 10%;
 }
 
 #home_form{
+    grid-column: 2;
+    grid-row: 2;
+
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*flex-direction: column;*/
+    /*align-items: normal;*/
+
     border: 3px solid white;
     border-radius: 15px;
-    padding: 0 5% 5%;
+
+    padding: 5%;
+
+    /*border: 1px solid white;*/
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5%;
+}
+
+
+
+#index_footer{
+    text-align: right;
+    grid-column: 1/4;
+    grid-row: 3;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#index_error{
+    text-align: center;
+    color: yellow;
+}
+
+#hospital_container{
+    border: 1px solid white;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#hospital_name{
+    background: #3abeee;
+    grid-column: 1/3;
+    grid-row: 1;
+}
+
+#hospital_details{
+    grid-column: 1/3;
+    grid-row: 2;
 }
