Finished styling the contact's log in page for this phase.

--- a/stratHealthProject/stratHealthApp/templates/stratHealthApp/home.html
+++ b/stratHealthProject/stratHealthApp/templates/stratHealthApp/home.html
@@ -9,27 +9,57 @@
 </head>
 <body>
 
+<!-- The 1st grid to style the entire page -->
 <div id="index_container">
 
-    <h2 class="header" id="logo_header">Strategic Health</h2>
-
-    <div class="header" id="home_top_middle">
-        <h3 id="home_form_label">Welcome {{ contact_name }}</h3>
+    <div class="header" id="logo_header">
+        <h2 >Strategic Health</h2>
     </div>
+
+<!--    <div class="header" id="home_top_middle">-->
+<!--        <h3 id="home_form_label">Welcome {{ contact_name }}</h3>-->
+<!--    </div>-->
 
     <div class="header" id="home_top_right">
-        <a href="{% url 'log_user_out' %}">Log Out</a>
+        <h4>Logged in as {{ contact_name }}</h4><a href="{% url 'log_user_out' %}">Log Out</a>
+<!--        <a href="{% url 'log_user_out' %}">Log Out</a>-->
     </div>
 
-    <div id="home_form">
-        {% if hospital_info|length > 0 %}
+    <!-- 2nd grid to dynamically list all of the hospitals -->
+    {% if hospital_info|length > 0 %}
+        <div id="home_form">
             <!-- Using a dictionary of all hospitals with their information provided. -->
             {% for key, value in hospital_info.items %}
+
+                <!-- 3rd grid to style each hospital -->
                 <div id="hospital_container">
-                    <h4 id="hospital_name">{{ key }}</h4>
-                    <p id="hospital_details">average salary is {{ value.salary_average }} and highest paid staff is {{ value.highest_paid_staff }}</p>
+                    <h2 id="hospital_name" class="center_text">{{ key }}</h2>
+                    <h3 id="hospital_address" class="center_text"> {{ value.hospital_address }}</h3>
+                    <div id="hospital_staff">
+                        <h4>Staff</h4>
+                        {% load humanize %}
+                        <p>Average Salary: ${{ value.salary_average|floatformat:0|intcomma  }}</p>
+                        <p>Highest Paid Staff: {{ value.highest_paid_staff }}</p>
+                    </div>
+                    <div id="hospital_procedure">
+                        <h4>Procedures</h4>
+                        {% if value.number_of_procedures > 0 %}
+                            <p>Average Procedure: ${{ value.avg_procedure_cost|floatformat:0|intcomma }}</p>
+                            <p>Highest Procedure: ${{ value.highest_cost_procedure|floatformat:0|intcomma }}</p>
+                            <p>Number of Procedures: {{ value.number_of_procedures|intcomma }}</p>
+                        {% else %}
+                            <p>None</p>
+                        {% endif %}
+                    </div>
+
                 </div>
+
             {% endfor %}
+
+            <div id="index_footer">
+                <p>Created By <a href="https://www.linkedin.com/in/kenngibbs/" target="_blank">Kenn Gibbs</a></p>
+            </div>
+
 
 <!--         A list(array) of hospital objects with it's necessary information. Same information as above.-->
 <!--            <ul>-->
@@ -41,14 +71,14 @@
 <!--                {% endfor %}-->
 <!--            </ul>-->
 
-        {% else %}
-            <h3>No hospitals attached to this user.</h3>
-        {% endif %}
-    </div>
+        </div>
+    {% else %}
+    <h3 id="zero_hospitals">No hospitals attached to this user.</h3>
+    {% endif %}
 
-    <div id="index_footer">
-        <p>Created By <a href="https://www.linkedin.com/in/kenngibbs/" target="_blank">Kenn Gibbs</a></p>
-    </div>
+<!--    <div id="index_footer">-->
+<!--        <p>Created By <a href="https://www.linkedin.com/in/kenngibbs/" target="_blank">Kenn Gibbs</a></p>-->
+<!--    </div>-->
 </div>
 
 </body>
