--- a/stratHealthProject/stratHealthApp/static/stratHealthApp/css/home.css
+++ b/stratHealthProject/stratHealthApp/static/stratHealthApp/css/home.css
@@ -13,20 +13,37 @@ a:hover {
     text-decoration: underline;
 }
 
-
 body {
     background: #0b2e39;
-    font-size: 1.25em;
-    color: white;
+    /*font-size: 1.25em;*/
+    color:  white;
 }
 
 .header{
+    padding: 1% 0%;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 
+/****************************
+*****   1st CSS Grid   ******
+*** Style the entire page ***
+****************************/
+
+#index_container{
+    padding: 0% 8%;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+
+    display: grid;
+    grid-template-columns: 1fr 90% 1fr;
+    grid-template-rows: 10% 1fr 10%;
+}
+
 #logo_header{
+    font-size: 1.25em;
     grid-column: 1/4;
     grid-row: 1;
 }
@@ -39,22 +56,35 @@ body {
 
 #home_top_right{
     text-align: right;
-    grid-column: 1/4;
+    grid-column: 2/4;
     grid-row: 1;
 }
 
-#index_container{
-    padding: 2% 8%;
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
-
-    display: grid;
-    grid-template-columns: 1fr 90% 1fr;
-    grid-template-rows: 10% 1fr 10%;
+/* Footer for the 1st CSS Grid */
+#index_footer{
+    text-align: right;
+    /*grid-column: 1/4;*/
+    /*grid-row: 3;*/
+    grid-column: span 2;
+    height: 10%;
+    margin-bottom: 3%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
+/****************************************
+***********   2nd CSS Grid   ************
+* Holds the dynamic number of hospitals *
+****************************************/
+
+/*2nd grid that holds the dynamic number of hospitals*/
 #home_form{
+    /*border: 3px solid white;*/
+    border-radius: 15px;
+    padding: 2%;
+    /*border: 1px solid white;*/
+
     grid-column: 2;
     grid-row: 2;
 
@@ -63,47 +93,65 @@ body {
     /*flex-direction: column;*/
     /*align-items: normal;*/
 
-    border: 3px solid white;
-    border-radius: 15px;
-
-    padding: 5%;
-
-    /*border: 1px solid white;*/
+    /*2nd CSS Grid for the hospitals assigned to the contact */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5%;
+    grid-auto-rows: 50%;
+    /*grid-auto-rows: minmax(200px);*/
+    gap: 3%;
 }
 
-
-
-#index_footer{
-    text-align: right;
-    grid-column: 1/4;
-    grid-row: 3;
-
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#index_error{
-    text-align: center;
-    color: yellow;
-}
+/*****************************
+******   3rd CSS Grid   ******
+* Styling for each hospital  *
+*****************************/
 
 #hospital_container{
     border: 1px solid white;
+    text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
 #hospital_name{
+    color: #0b2e39;
     background: #3abeee;
     grid-column: 1/3;
     grid-row: 1;
 }
 
-#hospital_details{
+#hospital_address{
     grid-column: 1/3;
     grid-row: 2;
+}
+
+#hospital_staff{
+    grid-column: 1;
+    grid-row: 3;
+    border-right: 2px solid white;
+    padding: 2%;
+}
+
+#hospital_procedure{
+    grid-column: 2;
+    grid-row: 3;
+    /*border: 1px solid white;*/
+    padding: 2%;
+}
+
+.center_text{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#zero_hospitals{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    grid-column: 1/4;
+    grid-row: 2;
+
 }
